Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113172

Qt 6.5 Material TextField placeholder breaks with alignment

XMLWordPrintable

    • Linux/X11
    • 4ab11d03a (dev), 7973b58a1 (6.5.1), 40d39636a (6.5)

      When using TextField and setting alignment to something other than AlignLeft, the placeholder text is not placed in the correct location

      Attached small project

      import QtQuick
      import QtQuick.Window
      import QtQuick.Controls.Material
      import QtQuick.Layouts
      Window {
          width: 640
          height: 480
          visible: true
          title: qsTr("Hello World")
          ColumnLayout{
              anchors.top:parent.top
              anchors.left: parent.left
              anchors.right:parent.right
              anchors.topMargin:10
              spacing:10
              TextField{
                  Layout.fillWidth:true
                  placeholderText:"AlignLeft"
                  horizontalAlignment:Text.AlignLeft
              }
              TextField{
                  Layout.fillWidth:true
                  placeholderText:"AlignHCenter"
                  horizontalAlignment:Text.AlignHCenter
              }
              TextField{
                  Layout.fillWidth:true
                  placeholderText:"AlignRight"
                  horizontalAlignment:Text.AlignRight
              }
          }
      }
      

        1. image-2023-04-26-07-42-58-828.png
          17 kB
          Ian Haber
        2. image-2023-04-26-07-43-13-058.png
          17 kB
          Ian Haber
        3. image-2023-04-26-07-43-26-078.png
          17 kB
          Ian Haber
        4. MaterialTextFieldPlaceholderBug.zip
          2 kB
          Ian Haber
        5. Screenshot from 2023-05-02 14-22-38.png
          6 kB
          Mitch Curtis
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mitch_curtis Mitch Curtis
            ihaber Ian Haber
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes