Material: fix placeholder text alignment

The placeholder text should always be aligned to the left
according to my tests on native Android via an emulator.

Fixes: QTBUG-113172
Change-Id: I75ae31e1e6b9846d90ab5034c43f8684698e0ab7
Reviewed-by: Oliver Eftevaag <oliver.eftevaag@qt.io>
(cherry picked from commit 4ab11d03ac2aecec3d4d304e566c9bb161e22090)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>